--- a/README
+++ b/README
@@ -2,21 +2,17 @@ Cryptopus
 
 = WARNING =
 
-Please remember that putting all your 
-passwords together in database and make
-this database accessible over the internet
-might be a relevant security thread and risk. 
-As well at the end the security on these 
-passwords will only lie in the security of your 
-SSL-secured connection (never use an unencrypted
-connection!), as well (and this is the main
-point) in the security of your main password.
-So be wise while using it, choose a good 
-password. And cryptopus won't make your 
-passwords more secure! It gives you only the 
-possibility to manage them in a nice way, 
-store them in a safe manner and share them with 
-other peoples you'd like to.
+Please remember that putting all your passwords together in database and making
+this database accessible over the internet might be a relevant security threat
+and that should be considered prior to using cryptopus.
+In the end the passwords and keys are only as safe as the host that is running
+cryptopus and the SSL-secured connections (never use an unencrypted
+connection!), as well (and this is the main point) as the strength of your main
+password.
+So calculate the risk this setup might pose and choose a good password.
+Cryptopus won't make your passwords more secure! It simply gives you the
+possibility to manage them in a nice way, store them in a safe manner and share
+them with other people you'd like to.
 
 = Requirements =
 
