--- a/README.textile
+++ b/README.textile
@@ -21,28 +21,28 @@ h1. Features
 * LDAP authentication
 * Autologout
 
-h1. %{color:red}Warning!%
+h1. Warning!
 
-%{color:red}Please remember that putting all your passwords together in a database and making this database accessible over the internet might be a relevant security threat. The passwords and keys are only as safe as the host that is running cryptopus and the SSL-secured connections (never use an unencrypted connection!), as well (and this is the most important point) as the strength of your main password.%
+Please remember that putting all your passwords together in a database and making this database accessible over the internet might be a relevant security threat. The passwords and keys are only as safe as the host that is running cryptopus and the SSL-secured connections (never use an unencrypted connection!), as well (and this is the most important point) as the strength of your main password.
 
-%{color:red}So calculate the risk this setup might pose and choose a good password. Cryptopus won’t make your passwords more secure! It simply gives you the possibility to manage them in a nice way, store them in a safe manner and share them with other people if you wish to do so.%
+So calculate the risk this setup might pose and choose a good password. Cryptopus won’t make your passwords more secure! It simply gives you the possibility to manage them in a nice way, store them in a safe manner and share them with other people if you wish to do so.
 
-%{color:red}Under no circumstances can we ever be held liable for password theft, lost passwords or any other inconvenience caused by using cryptopus. Please read this paragraph three more times, it’s important!%
+Under no circumstances can we ever be held liable for password theft, lost passwords or any other inconvenience caused by using cryptopus. Please read this paragraph three more times, it’s important!
 
 h1. Requirements
- 
+
 * LDAP as a user directory
 * Rails 2.3.2
 
 h1. Installation Notes
 
-# download : @git clone git://github.com/puzzle/cryptopus.git@
+# download: @git clone git://github.com/puzzle/cryptopus.git@
 # @cd cryptopus@
 # @cp config/database.yml-dist config/database.yml@
 # edit file @database.yml@
 # set up database
-* @mysql> create database cryptopus_production;@
-* @mysql> grant all on cryptopus_production.* to 'cryptopus'@'localhost' identified by 'mypass'@
+   * @mysql> create database cryptopus_production;@
+   * <code>mysql> grant all on cryptopus_production.* to 'cryptopus'@'localhost' identified by 'mypass'</code>
 # initialize database: @rake db:migrate@
 # start server: @scripts/server@
 
