--- a/README.textile
+++ b/README.textile
@@ -31,10 +31,11 @@ Under no circumstances can we ever be held liable for password theft, lost passw
 
 h1. Requirements
 
-* Ruby 1.8.7-p370
+* Ruby 1.9.3
 * rvm
 * bundle
 * mysql-server
+* libmysqlclient-dev
 * optional: LDAP as a user directory
 
 h1. Installation Notes
@@ -42,8 +43,8 @@ h1. Installation Notes
 # download: @git clone git://github.com/puzzle/cryptopus.git@
 # @cd cryptopus@
 # Install RVM (see https://rvm.io/rvm/install)
-# rvm install ruby-1.8.7
-# rvm use ruby-1.8.7-p370
+# rvm install 1.9.3
+# rvm use 1.9.3
 # rvm gemset create cryptopus
 # bundle
 # @cp config/database.yml-dist config/database.yml@
