--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -24,6 +24,10 @@ de:
   change_password: "Passwort wechseln"
   last_login: "Ihr letztes Login war vor %{time_ago}."
   
+  i18n:
+    language:
+      name: 'Deutsch'
+  
   accounts:
     index:
       move: "Account zu einer anderen Gruppe verschieben"
