--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -23,6 +23,8 @@ de:
   users: "Benutzer"
   change_password: "Passwort wechseln"
   last_login: "Ihr letztes Login war vor %{time_ago}."
+  group: "Gruppe"
+  team: "Team"
 
   i18n:
     language:
