--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -149,6 +149,9 @@ en:
       title: "Create a new team"
 
   flashes:
+    wizard:
+      fill_password_fields: "Please fill all fields"
+      paswords_do_not_match: "Passwords do not match"
     admin:
       admin:
         no_access: "Access denied"
