--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -23,7 +23,7 @@ de:
   users: "Benutzer"
   change_password: "Passwort wechseln"
   last_login: "Ihr letztes Login war vor %{time_ago}."
-  unencrypted_description_field: "Dieses Beschreibungsfeld ist nicht verschlüsselt!"
+  unencrypted_field_caption: nicht verschlüsselt
   group: "Gruppe"
   team: "Team"
 
