--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -23,7 +23,7 @@ en:
   users: "Users"
   change_password: "Change password"
   last_login: "Your last login was %{time_ago} ago."
-  unencrypted_description_field: "This description field is not encrypted!"
+  unencrypted_field_caption: not encrypted
   group: "Group"
   team: "Team"
 
