--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -195,6 +195,8 @@ de:
       wrong_user_password: "Geben Sie einen gültigen Benutzernamen und ein korrektes Passwort ein oder prüfen Sie Ihre LDAP Einstellungen."
       created: "Das Team wurde erfolgreich erstellt."
       updated: "Das Team wurde erfolgreich angepasst."
+      deleted: "Das Team wurde erfolgreich gelöscht"
+      cannot_delete: "Das Team kann nicht gelöscht werden wenn sie nicht admin oder das letzte Teammitglied sind! Bitte kontaktieren sie einen admin"
     teammembers:
       could_not_remove_last_teammember: "Der letzte Benutzer eines Teams kann nicht entfernt werden"
 
