--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -200,6 +200,8 @@ en:
       wrong_user_password: "Enter a correct username and password or check the LDAP Settings"
       created: "Successfully created a new team."
       updated: "Team was successfully updated."
+      deleted: "Team was successfully deleted"
+      cannot_delete: "Team cannot be deleted if you are not admin or last teammember! Please contact an Admin"
     teammembers:
       could_not_remove_last_teammember: "Could not remove last teammember"
 
