--- a/README.textile
+++ b/README.textile
@@ -31,59 +31,44 @@ Under no circumstances can we ever be held liable for password theft, lost passw
 
 h1. Requirements
 
-* Ruby 1.9.3
+* Ruby 2.2.1
 * rvm
 * bundle
 * mysql-server
-* libmysqlclient-dev
+* libmysqlclient-dev, mysql-client
+* sqlite3
 * optional: LDAP as a user directory
 
-h1. Installation Notes
+h1. Setup Development Environment
 
-h2. Download
+h2. Install System Requirements
 
+on Ubuntu execute the following command to install system requirements:
+
+@sudo apt-get install sqlite3 mysql-client libmysqlclient-dev@
+
+h2. Source
+
+In Terminal:
 @git clone git://github.com/puzzle/cryptopus.git@
 
 h2. Ruby
 
 Install RVM (see https://rvm.io/rvm/install)
-@rvm install 1.9.3@
-@rvm use 1.9.3@
+
+@rvm install 2.2.1@
+@rvm use 2.2.1@
 @rvm gemset create cryptopus@
 @cd cryptopus@
 @bundle@
 
-h2. Database
+h2. Database Setup
 
-set up database: @mysql> create database cryptopus_production;@
-<code>mysql> grant all on cryptopus_production.* to 'cryptopus'@'localhost' identified by 'mypass'</code>
+recomended database for development: sqlite3
 
-The database.yml file reads its settings from the environment variables. For development create a config file like this
-which you can source "cryptopus.env" @source cryptopus.env@.
-
-bc. alias rails='bundle exec rails'
-export PATH=/opt/ruby-1.9.3/bin:$PATH
-export RAILS_ENV=production
-export RAILS_DB_NAME='cryptopus_production'
-export RAILS_DB_USERNAME='cryptopus'
-export RAILS_DB_PASSWORD='mypass'
-export RAILS_DB_ADAPTER='mysql2'
-export RAILS_DB_HOST='dbserver.example.com'
-export RAILS_DB_PORT='3306'
-
-To deploy in production, you can set the variables for apache in your vhost:
-
-bc. SetEnv RAILS_ENV production
-SetEnv RAILS_DB_NAME 'cryptopus_production'
-SetEnv RAILS_DB_USERNAME 'cryptopus'
-SetEnv RAILS_DB_PASSWORD 'mypass'
-SetEnv RAILS_DB_ADAPTER 'mysql2'
-SetEnv RAILS_DB_HOST 'dbserver.example.com'
-SetEnv RAILS_DB_PORT '3306'
-
-initialize database: @rake db:migrate@
-start server: @scripts/server@
-log into app with user root, first used password will be set automatically as password for this user
+initialize database and loading database dev seeds: @rake db:setup@
+start server: @rails s@
+log into app with user "root" and password "password"
 
 h2. Mock + RPM + Puppet
 
@@ -95,7 +80,7 @@ You can integrate this in Jenkins if you want. This RPM can then be deployed wit
 
 @http://puppet-modules.git.puzzle.ch/?p=module-rubyapps.git@
 
-This Puppet class automaticaly deploys the vhost configuration including environment variables needed for the database. 
+This Puppet class automaticaly deploys the vhost configuration including environment variables needed for the database.
 
 h1. Contact Information
 
