--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -198,7 +198,7 @@ fr:
       created: "Créé avec succès une nouvelle équipe."
       updated: "L'équipe a été mise à jour avec succès."
       deleted: "L'équipe a été supprimé."
-      cannot_delete: "Vous pouvez seulement supprimer une équipe si vous etes le dernier membre ou un admin. Contactez un admin."
+      cannot_delete: "Vous pouvez seulement supprimer une équipe si vous etes un root ou un admin."
     teammembers:
       could_not_remove_last_teammember: "Il n’est pas possible de supprimer le dernier utilisateur de l'équipe"
 
