--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -125,7 +125,7 @@ fr:
       description: "Nous avons créé une nouvelle paire de clés pour vous. Amusez-vous avec Cryptopus."
     noaccess:
       title: "Accès refusé"
-    pwdchange:
+    show_update_password:
       title: "Changer le mot de passe"
       old: "Ancien mot de passe"
       new: "Nouveau mot de passe"
