--- a/README.textile
+++ b/README.textile
@@ -66,7 +66,7 @@ h2. Database Setup
 
 recomended database for development: sqlite3
 
-initialize database and loading database dev seeds: @rake db:setup@
+initialize database and loading database dev seeds: @rake db:migrate@
 start server: @rails s@
 log into app with user "root" and password "password"
 
@@ -77,7 +77,7 @@ You can easily test Cryptopus with Docker:
 1. "Install Docker":https://docs.docker.com/engine/installation/ubuntulinux/
 2. Build Docker image: @docker build -t cryptopus .@
 3. Run Docker container: @docker run -it --rm --name cryptopus -p 3000:3000 cryptopus@
-4. Execute rake: @docker exec cryptopus rake db:setup@
+4. Execute rake: @docker exec cryptopus rake db:migrate@
 5. Visit "localhost:3000":http://localhost:3000 in your browser
 
 h2. Mock + RPM + Puppet
